词库优化完毕

--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -3691,7 +3691,7 @@ zzyb 这有
 zzye 这也
 zzyi 这一
 zzyk 这要
-l 来 了 两 离 里
+l 了
 la 啦 剌 拉 落 辣
 laa 邋
 laba 喇叭
@@ -3725,7 +3725,6 @@ lbo 漏
 lbpj 楼盘
 lbu 篓
 lc 了 佬 劳 料 炉 疗 聊 辽 露
-lca 了
 lcba 了吧
 lcbh 了帮
 lcbm 了编
@@ -3878,7 +3877,7 @@ ldze 两者
 ldzh 两张
 ldzs 两种
 ldzu 两组
-le 了 乐 勒 冷 蓝
+le 了 乐 勒
 lea 阞
 lebh 了帮
 lebm 了编
@@ -4057,7 +4056,7 @@ lizk 里抓
 lizl 李在 里再
 lizu 立足
 lizw 里抓
-lj 兰 拦 栏 蓝 览 篮 缆
+lj 蓝 兰 拦 栏 览 篮 缆
 lja 缆
 ljde 懒得 栏的
 ljdi 栏的
@@ -5074,6 +5073,7 @@ xymu 醒目
 xyng 性能
 xyo 性
 xyoo 性
+xyooa 性阿
 xypj 星盘
 xyqq 星球
 xyqu 兴趣 行且
