--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -11144,7 +11144,7 @@ sjta 送其他
 sjtb 设计图标
 sjtd 啥具体的 是具体的 是静态的 是监听本地 设计挺好的 数据同步到
 sjth 数据替换 设计挺好
-sjti 啥具体 是具体
+sjti 山体 啥具体 是具体
 sjtj 数据台式机
 sjtl 是静态 是具体资料 数据同步了
 sjtm 是截图么 送其他没 三天
@@ -23822,7 +23822,7 @@ dgwf 不给我发 大家文 单个文档不
 dgwh 都改为用户
 dgwl 不给我发了
 dgwm 的给我吗 多给我的没
-dgwo 不给我 不过我 提高我 的给我
+dgwo 等我 不给我 不过我 提高我 的给我
 dgwp 的购物小票
 dgwq 不给我发钱
 dgws 不过为啥 大家文生 都给我简单
