完善候选词逻辑

--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -33266,7 +33266,7 @@ xmzg 项目在根 项目这个 现正
 xmzi 些名字 限制 闲置 仙子 先只
 xmzj 下面再加
 xmzk 先找
-xmzl 下面再 还没在 项目在 现在
+xmzl 现在 下面再 还没在 项目在
 xmzm 新民主主义革命 项目在前面 项目在根穆
 xmzn 下面这种你 羡慕这种能
 xmzo 先作
@@ -39768,7 +39768,7 @@ hfhe 会覆盖
 hfhg 会不会跟 还不行 会不会是跟
 hfhh 还不行
 hfhj 好不好卖就
-hfhk 好不好 很不好 盖不好 很好
+hfhk 很好 好不好 很不好 盖不好
 hfhl 很不合理 盖不好了 行不行了
 hfhm 好不好卖
 hfhn 会覆盖按钮
