优化候选框速度

--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -805,7 +805,7 @@ ydzw 说的中文
 ydzx 移动端下 说的再清晰 移动端排序
 ydzy 也不重要 有的只有 也不知道说
 ydzz 又带着查 说的这种 页的这 移动端一致 移动端下子 移动端现在
-ye 业 也 叶 咽 夜 爷 腋 野 页 拽
+ye 也 业 叶 咽 夜 爷 腋 野 页 拽
 yea 运输
 yeba 页吧
 yebf 也笨
@@ -8005,7 +8005,7 @@ jtda 就停留
 jtdb 系统的版 其他地方不 其他的全不 其他的脚本 其他都 具体的目标 几条都 系统都
 jtdc 其他的才 其他都正常 其他都隐藏
 jtdd 其他的都 其他不见的 其他地方不 其他多余的 其他的全不 其他都去掉 其它的小的 具体的频道
-jtde 其他的 其它的 就听得 巨大的 接它的 系统的 给它的 身体的 觉得 嚼得
+jtde 觉得 其他的 其它的 就听得 巨大的 接它的 系统的 给它的 身体的 嚼得
 jtdf 其他地方 其他地方不 其他的全不 具体的计分 系统的方法
 jtdg 给他点了个 其他的修改 其他的先给
 jtdh 身体不还 巨大的变化 箭头点击后 身体不还和 今天的生活
@@ -50520,7 +50520,7 @@ wfta 问它
 wftb 我发大群吧
 wftc 我不太清楚
 wftd 免费调用的
-wfti 无法体 问题
+wfti 问题 无法体
 wftj 我不提交
 wftl 我不太
 wftq 我发大群
