候选显示编码

--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -3804,6 +3804,7 @@ yudr 预断
 yudy 预定
 yue 与
 yuee 玉
+yuei 雨
 yufa 语法
 yufb 与否
 yufz 与非
@@ -6868,6 +6869,7 @@ jlzy 家里只有
 jm 见 见面
 jma 建
 jmbf 界面部分 给每本
+jmbh 肩膀
 jmbj 进模版
 jmbl 就忙不过来
 jmbm 渐变
@@ -11911,6 +11913,7 @@ soyi 所以 说以
 soyk 数要
 soys 所用
 soyu 所欲
+sozl 所在
 sp 孙 损 水平 笋 顺 瞬
 spa 孫
 spba 随便把
@@ -17760,6 +17763,7 @@ zerf 责任 这人
 zesa 这傻
 zesb 这首
 zesi 赭石 这时 这是
+zesiyidr 这是一段
 zesj 这散
 zeso 咋说 这所
 zesr 折算
@@ -18663,6 +18667,7 @@ zijm 之间 自建
 zijn 至今
 zijq 字就
 zijx 字节 直接
+zikf 只肯
 ziku 字库
 zilc 字了 资料 齐了
 zild 质量
@@ -23302,6 +23307,7 @@ deli 的哩 的里
 delk 的话 的黑
 dels 地弄
 delx 的列
+delz 的泪
 dema 的么 的码
 deml 地买 地卖 的买
 demo 的么 的没
@@ -26048,6 +26054,7 @@ dqsc 的确是种 当前时间戳 当前是哪种
 dqsd 但其实不 提前锁定 当前书名的 当前使用的 当前提交的 当前是本地
 dqsf 但其实不
 dqsg 但其实成功 但其实是个
+dqsh 地球上
 dqsi 不全是 不只是 当前是 的全是 的前提 的只是
 dqsj 当前书籍 当前提交 提取数据 但其实文件
 dqsk 都缺少
@@ -30372,7 +30379,7 @@ lqxn 绿清新 刘欣
 lqxq 里强行拉去
 lqxt 留学
 lqxw 留下
-lqxy 里强行 流行
+lqxy 里强行 流行 流星
 lqxz 了钱想做
 lqyb 留卡有 里只有 留有
 lqyc 拉取远程
@@ -31226,6 +31233,7 @@ lxyp 刘欣云
 lxyr 练习用日月
 lxys 两行以上 了下映射 了解以上 练习用
 lxyt 留下一条
+lxyu 流行雨
 lxyx 离线运行 里写运行
 lxyy 了下映射 练习用日月
 lxyz 类型验证 脸型一致
@@ -38548,7 +38556,7 @@ qtzs 其他子菜单
 qtzt 其他主题
 qtzx 请他查一下 前天在学校
 qtzy 其它作用
-qu 区 去 取 娶 屈 曲 气 渠 球 群 趣 趋 距 路 越 运 驱 渐 鸡
+qu 去 区 取 娶 屈 曲 气 渠 球 群 趣 趋 距 路 越 运 驱 渐 鸡
 qua 屈
 quai 阹
 qubx 区别 去别
@@ -38568,6 +38576,7 @@ quhg 且行
 quhh 且行
 qui 曲
 quke 去可
+qukj 去看
 qulc 去了
 quls 去弄
 qumo 去没
@@ -40427,6 +40436,7 @@ hjzu 会技术 后记住 和技术 还闲着
 hjzw 和技术人文
 hjzx 行且珍惜
 hjzy 后期这要 好几种日语
+yewj 夜晚
 hjzz 后期这 很精致你再
 hk 好 号 唬 壕 很快 昊 浩 豪 耗 蚝 郝
 hkba 合适吧 好吧
@@ -43356,6 +43366,7 @@ celt 策略
 ceo 测
 ceoo 测 澈
 cesi 测试
+cesiwfbf 测试文本
 ceso 厕所
 ceu 策
 ceua 册
@@ -45491,7 +45502,7 @@ czzl 操作之类 操作在
 czzm 单字转换吗
 czzy 操作只在有 成真正对应
 czzz 操作只在 操作自在
-e 额 俄 恶 饿 哦 鹅 扼 愕 遏 娥 呃 厄 鄂 讹 蛾 颚 鳄 错 而
+e 饿 额 俄 恶 哦 鹅 扼 愕 遏 娥 呃 厄 鄂 讹 蛾 颚 鳄 错 而
 en 恩 嗯 唔
 er 二 而
 k 可 开 快 看 空
@@ -46204,7 +46215,7 @@ kie 考虑
 kii 开业
 kio 宽敞
 kiu 孔雀
-kj 刊 勘 喊 坎 堪 坚 看 核 看见 砍
+kj 看 刊 勘 喊 坎 堪 坚 核 看见 砍
 kjbl 开机不亮
 kjbs 控件表示
 kjby 看并
@@ -50173,6 +50184,7 @@ wczx 外层正解 完成这些
 wczz 完成这
 wd 味道 问道
 wda 误导
+wdai 我的爱
 wdba 文档吧
 wdbc 文档被删除
 wdbd 我的报道 文档标题的 我带不能当
@@ -67393,7 +67405,7 @@ rhms 然后每行书
 rhmx 然后每行
 rhmy 人会没有
 rhmz 人还没
-rhni 然后呢
+rhni 让你 然后呢
 rhnj 然后你直接
 rhnx 然后你写
 rhpc 如何排查 如何排除
