增加了左右翻页和实时更新候选

--- a/dict/sbzr.userdb.yaml
+++ b/dict/sbzr.userdb.yaml
@@ -863,7 +863,7 @@ yesu 页数
 yesv 也说
 yetb 也投
 yeu 爷
-yewj 也挽
+yewj 夜晚 夜喂
 yewu 业务
 yewz 页尾
 yexd 也享
@@ -2101,7 +2101,7 @@ yjyq 也就以去 以及一只
 yjyr 演员
 yjys 硬件要是 沿用
 yjyt 以简约 硬件有问题
-yjyu 用敬语
+yjyu 用敬语 言语
 yjyv 已经有了啊 也就一般啊
 yjyx 一集营销 研究一些
 yjyy 已经运营 硬件要是有
@@ -29523,7 +29523,7 @@ lizk 里抓
 lizl 李在 里再
 lizu 立足
 lizw 里抓
-lj 蓝 兰 拦 栏 览 篮 缆
+lj 蓝 兰 拦 栏 览 篮 缆 烂
 lja 缆
 ljba 话就把 逻辑吧
 ljbc 话就把词 连接报错
@@ -31233,7 +31233,7 @@ lxyp 刘欣云
 lxyr 练习用日月
 lxys 两行以上 了下映射 了解以上 练习用
 lxyt 留下一条
-lxyu 流行雨
+lxyu 流星雨
 lxyx 离线运行 里写运行
 lxyy 了下映射 练习用日月
 lxyz 类型验证 脸型一致
@@ -31579,6 +31579,7 @@ lzmz 连桌面壁纸
 lznc 两种能看出
 lzng 两种能
 lzo 泪
+lzoo 泪哦 泪
 lzpj 了只比较
 lzqd 乱再去掉 了正确的
 lzqs 里抓取图书
@@ -32155,7 +32156,7 @@ xdxj 还不想就
 xdxk 学东西很快
 xdxl 想到希腊 想留下来 行不行了
 xdxm 新的项目 想现
-xdxn 许多新 相信
+xdxn 相信 许多新
 xdxs 下不显示 想到还是
 xdxt 写大学
 xdxw 向下
@@ -40436,7 +40437,6 @@ hjzu 会技术 后记住 和技术 还闲着
 hjzw 和技术人文
 hjzx 行且珍惜
 hjzy 后期这要 好几种日语
-yewj 夜晚
 hjzz 后期这 很精致你再
 hk 好 号 唬 壕 很快 昊 浩 豪 耗 蚝 郝
 hkba 合适吧 好吧
@@ -43427,7 +43427,7 @@ cfld 重复朗读
 cfle 成翻了
 cflg 才发了一个
 cfmi 沉迷
-cfmo 拆分万
+cfmo 沉默
 cfni 吃饭呢
 cfo 衬
 cfpi 晨风被
@@ -43800,7 +43800,7 @@ cjld 产量 创建了一堆
 cjle 催缴了
 cjlg 创建了一个
 cjli 插件里
-cjlj 参加了东京 参加了直接
+cjlj 参加了东京 参加了直接 灿烂
 cjlm 蝉联 刺激了这么
 cjlp 插件里双拼
 cjlx 插件离线
@@ -44223,7 +44223,6 @@ clzw 从里抓
 clzx 出来这些 处理这些 处理咱们先
 clzy 出来只要 成了这样
 clzz 出来左侧 出来转转 处理这种
-cm 充满 沉默
 cma 村民
 cmbj 成模版
 cmbn 触摸不能
@@ -46032,6 +46031,7 @@ kfu 垦
 kfvy 库房而已
 kfws 开发微信
 kfwx 开发微信 开发微信小
+kfwz 肯为
 kfxd 开发相关的 开发项目的
 kfxg 开发相关
 kfxl 看不见了
@@ -50932,7 +50932,7 @@ wie 为此
 wii 物业
 wio 往常
 wiu 巫师
-wj 万 丸 文件
+wj 万 丸 文件 喂
 wja 婉
 wjba 文青吧
 wjbb 文件不能被
@@ -67289,7 +67289,7 @@ rgzw 如果只有我
 rgzx 如果执行
 rgzy 如果只是用
 rgzz 如果这 如果这次做
-rh 嚷 壤 如何 攘
+rh 嚷 让 壤 如何 攘
 rha 纕
 rhba 如何吧 然后吧
 rhbb 然后不关闭
@@ -67408,6 +67408,7 @@ rhmz 人还没
 rhni 让你 然后呢
 rhnj 然后你直接
 rhnx 然后你写
+rhoa 让
 rhpc 如何排查 如何排除
 rhpg 如何评价
 rhph 然后配置好
@@ -68490,7 +68491,7 @@ ah 昂 肮 盎 仰
 ai 哀 唉 埃 挨 爱 癌 矮 碍 艾 诶
 an 按 安 案 暗 岸 俺 安 前
 ao 奥 澳 傲 熬 敖 凹 袄 懊 拗 啊
-o 卧 哦 我 握 沃 蚊 问 闻 下
+o 哦 卧 我 握 沃 蚊 问 闻 下
 ou 哦
 i 一 今 已
 ia 下
