--- a/dict/default.yaml
+++ b/dict/default.yaml
@@ -1,104 +1,100 @@
 yi 一 义 乙 亦 亿 以 仪 伊 依 倚 医 咦 夷 姨 宜 已 异 役 忆 怡 意 抑 易 椅 毅 溢 疑 疫 益 移 绎 胰 艺 蚁 衣 裔 议 译 谊 逸 遗
 ji 几 击 即 及 吉 基 季 寂 寄 己 忌 急 技 挤 既 机 极 济 激 疾 积 籍 级 纪 继 绩 肌 计 记 辑 迹 际 集 饥 鸡
 shi 世 事 似 使 势 十 史 士 失 始 实 室 市 师 式 拾 施 时 是 狮 石 示 视 誓 识 试 诗 豉 适 释 食 饰 驶
-zhi 之 值 制 只 址 帜 志 执 指 支 智 枝 植 止 治 炙 直 知 稚 窒 纸 织 置 职 肢 至 致 芝 质 趾
-xi 习 吸 喜 嘻 夕 媳 希 席 息 悉 惜 戏 晰 析 洗 溪 熄 熙 牺 稀 系 细 袭 西 锡 隙
 fu 付 伏 佛 副 咐 复 夫 妇 孵 富 幅 府 扶 抚 拂 斧 服 浮 父 福 符 肤 腐 腹 覆 负 赋 赴 辅 辐 附
+zhi 之 值 制 只 址 帜 志 执 指 支 智 枝 植 止 治 炙 直 知 稚 窒 纸 织 置 职 肢 至 致 芝 质 趾
 yan 严 厌 咽 妍 宴 岩 延 彦 掩 晏 沿 淹 演 炎 烟 焉 焰 燕 盐 眼 研 艳 衍 言 谚 雁 颜 验
 yu 与 予 于 余 喻 域 娱 宇 寓 御 愚 榆 欲 浴 渔 狱 玉 育 芋 裕 誉 语 豫 遇 郁 雨 预 鱼
-li 丽 例 利 力 励 历 厉 厘 吏 李 栗 梨 犁 狸 理 礼 离 立 粒 荔 莉 里 隶 鲤 黎
+xi 习 吸 喜 嘻 夕 媳 希 席 息 悉 惜 戏 晰 析 洗 溪 熄 熙 牺 稀 系 细 袭 西 锡 隙
 jian 件 俭 健 兼 减 剑 剪 坚 尖 建 捡 检 渐 煎 监 简 箭 肩 舰 艰 荐 见 贱 践 键 间
+li 丽 例 利 力 励 历 厉 厘 吏 李 栗 梨 犁 狸 理 礼 离 立 粒 荔 莉 里 隶 鲤 黎
 qi 七 乞 企 其 启 器 奇 契 妻 岂 崎 弃 旗 期 欺 气 汽 泣 漆 砌 祁 起 骑 齐
 wei 为 伟 位 卫 危 味 唯 喂 围 委 威 娓 尾 微 慰 未 畏 纬 维 胃 萎 谓 违 韦
-wu 乌 五 伍 侮 务 勿 午 吴 吾 呜 唔 屋 巫 悟 捂 无 武 污 物 舞 误
 shu 书 叔 属 抒 数 暑 术 束 树 梳 殊 熟 疏 竖 署 舒 蔬 薯 蜀 输 述 鼠
 jiao 交 侥 叫 娇 教 椒 浇 焦 狡 矫 绞 缴 胶 脚 蛟 角 轿 较 郊 酵 饺 骄
+wu 乌 五 伍 侮 务 勿 午 吴 吾 呜 唔 屋 巫 悟 捂 无 武 污 物 舞 误
 xian 仙 先 县 咸 娴 嫌 宪 掀 显 献 现 纤 线 羡 贤 闲 限 险 陷 馅 鲜
 jing 井 京 净 境 径 惊 敬 景 晶 睛 竞 竟 精 经 胫 警 镜 静 颈
 hui 会 回 恢 悔 惠 慧 挥 晖 晦 毁 汇 灰 绘 讳 诙 诲 贿 辉
 jin 仅 今 劲 尽 巾 斤 晋 津 浸 烬 禁 筋 紧 谨 近 进 金 锦
 jie 介 借 姐 届 戒 截 捷 接 揭 杰 洁 界 结 节 芥 街 解 阶
 you 优 佑 又 友 右 尤 幼 幽 忧 悠 有 柚 油 游 犹 由 诱 邮
-zhang 丈 仗 帐 张 彰 掌 杖 涨 漳 章 胀 账 长 障
-zhu 主 住 助 朱 柱 注 猪 珠 祝 竹 著 蛛 逐 铸 驻
-ju 举 俱 具 剧 句 局 居 巨 拒 拘 据 桔 矩 聚 距 锯
-xiang 乡 享 像 厢 向 响 巷 想 橡 相 祥 箱 详 象 项 香
 xie 些 写 协 卸 屑 懈 携 斜 械 榭 歇 泄 泻 胁 谐 谢 鞋
 bo 伯 剥 勃 博 卜 拨 搏 播 波 玻 箔 脖 膊 菠 铂 饽 驳
 ba 八 叭 吧 坝 巴 扒 把 拔 爸 疤 笆 罢 耙 芭 跋 霸 靶
-bi 哔 壁 币 彼 必 比 毕 笔 臂 蔽 逼 避 鄙 闭 鼻
+ju 举 俱 具 剧 句 局 居 巨 拒 拘 据 桔 矩 聚 距 锯
+xiang 乡 享 像 厢 向 响 巷 想 橡 相 祥 箱 详 象 项 香
 hu 乎 互 呼 唬 壶 忽 户 护 沪 湖 狐 糊 胡 葫 虎 蝴
+mei 妹 媒 昧 枚 梅 每 没 煤 玫 眉 美 莓 酶 镁 霉 魅
+zhu 主 住 助 朱 柱 注 猪 珠 祝 竹 著 蛛 逐 铸 驻
+bi 哔 壁 币 彼 必 比 毕 笔 臂 蔽 逼 避 鄙 闭 鼻
 yuan 元 冤 原 员 园 圆 怨 愿 援 源 缘 苑 袁 远 院
 mo 墨 寞 抹 摩 摸 末 模 沫 漠 磨 膜 莫 陌 魔 默
-mei 妹 媒 昧 枚 梅 每 没 煤 玫 眉 美 莓 酶 镁 霉 魅
 ban 伴 办 半 扮 扳 拌 搬 斑 板 版 班 瓣 绊 般 颁
 he 何 合 呵 和 喝 核 河 涸 盒 禾 荷 褐 贺 赫 鹤
+zhang 丈 仗 帐 张 彰 掌 杖 涨 漳 章 胀 账 长 障
 bao 保 包 堡 宝 报 抱 暴 爆 胞 苞 薄 豹 饱 鲍
-qian 前 千 欠 歉 浅 潜 牵 签 迁 遣 钱 钳 铅
-shan 删 善 山 扇 擅 杉 汕 珊 缮 衫 闪 陕
 ying 婴 应 影 映 樱 盈 硬 英 莹 萤 营 迎 颖 鹰
-wan 万 丸 婉 完 宛 弯 挽 晚 湾 玩 碗 腕 顽
-ya 丫 亚 压 呀 哑 牙 芽 衙 雅 鸦 鸭
-cheng 乘 呈 城 惩 成 承 撑 橙 秤 称 程 诚 逞
 di 低 地 堤 帝 底 弟 抵 敌 滴 笛 第 蒂 迪 递
 ke 克 刻 可 咳 坷 壳 客 柯 棵 渴 磕 科 课 颗
 zhou 周 咒 宙 州 帚 昼 洲 皱 粥 纣 肘 舟 轴 骤
-du 堵 妒 度 杜 毒 渡 独 督 肚 读 赌 镀
+qian 前 千 欠 歉 浅 潜 牵 签 迁 遣 钱 钳 铅
+wan 万 丸 婉 完 宛 弯 挽 晚 湾 玩 碗 腕 顽
+cheng 乘 呈 城 惩 成 承 撑 橙 秤 称 程 诚 逞
 feng 丰 凤 奉 封 峰 枫 疯 缝 蜂 讽 逢 锋 风
 zheng 争 征 拯 挣 政 整 正 症 睁 筝 蒸 证 郑
-ting 亭 停 厅 听 婷 庭 挺 汀 艇 蜓 霆
 ling 令 凌 另 岭 灵 玲 翎 聆 铃 陵 零 领 龄
 fen 份 分 吩 坟 奋 忿 愤 氛 焚 粉 粪 纷 芬
 gu 估 古 固 姑 孤 故 股 菇 谷 雇 顾 骨 鼓
-gong 供 公 共 功 宫 工 恭 拱 攻 贡 躬
-fan 凡 反 帆 泛 烦 犯 番 繁 翻 范 返 饭
-huang 皇 荒 蝗 谎 黄
 xu 叙 吁 序 徐 恤 旭 绪 续 蓄 虚 许 需 须
-zhen 圳 帧 振 枕 珍 真 诊 针 镇 阵 震
 xiao 孝 宵 小 效 晓 校 消 淆 硝 笑 箫 萧 销
+shan 删 善 山 扇 擅 杉 汕 珊 缮 衫 闪 陕
+du 堵 妒 度 杜 毒 渡 独 督 肚 读 赌 镀
+fan 凡 反 帆 泛 烦 犯 番 繁 翻 范 返 饭
 ge 个 割 各 咯 哥 格 歌 胳 阁 隔 革 鸽
 dan 丹 但 单 弹 担 掸 旦 淡 耽 胆 蛋 诞
 mu 亩 募 墓 姆 幕 慕 木 母 沐 牧 目 穆
 pu 仆 埔 扑 普 朴 浦 脯 菩 葡 蒲 谱 铺
 jia 价 佳 假 加 嘉 夹 家 架 甲 茄 贾 驾
-ti 体 剃 剔 屉 提 替 梯 踢 题
 lv 侣 吕 履 律 捋 旅 滤 率 绿 虑 铝 驴
-bian 便 变 扁 编 贬 辨 辩 辫 边 遍 鞭
 bei 倍 北 呗 备 悲 杯 狈 碑 背 被 贝 辈
 dao 倒 刀 到 叨 导 岛 捣 盗 祷 稻 蹈 道
 chang 倡 偿 厂 唱 场 尝 常 怅 敞 昌 畅 肠
-pi 匹 啤 屁 批 疲 痞 皮 脾 芘 譬
-guan 关 冠 官 惯 棺 灌 管 罐 观 贯 馆
 xing 兴 刑 型 姓 幸 形 性 星 杏 猩 行 醒
 mao 冒 卯 帽 毛 猫 矛 茂 茅 貌 贸 铆 锚
 duo 剁 哆 垛 堕 多 夺 惰 掇 朵 跺 踱 躲
-lu 卢 卤 录 炉 碌 芦 路 陆 露 鲁 鹿
-yin 印 吟 因 引 殷 银 阴 隐 音 饮
 tan 叹 坛 坦 忐 探 摊 滩 炭 碳 袒 谈 贪
-dong 东 冬 冻 动 咚 懂 栋 洞 董
-zhong 中 仲 众 忠 种 终 肿 衷 重 钟
+ya 丫 亚 压 呀 哑 牙 芽 衙 雅 鸦 鸭
+ting 亭 停 厅 听 婷 庭 挺 汀 艇 蜓 霆
+gong 供 公 共 功 宫 工 恭 拱 攻 贡 躬
+zhen 圳 帧 振 枕 珍 真 诊 针 镇 阵 震
+bian 便 变 扁 编 贬 辨 辩 辫 边 遍 鞭
+guan 关 冠 官 惯 棺 灌 管 罐 观 贯 馆
+lu 卢 卤 录 炉 碌 芦 路 陆 露 鲁 鹿
 qiao 乔 侨 俏 巧 悄 敲 桥 瞧 窍 翘 跷
 shen 什 伸 审 慎 深 甚 申 神 绅 肾 身
 yang 仰 养 央 扬 杨 样 氧 洋 痒 羊 阳
-chu 储 出 初 厨 处 楚 畜 础 触 除
-ao 傲 凹 嗷 奥 懊 拗 敖 澳 熬 袄
 sha 傻 刹 厦 啥 杀 沙 煞 砂 纱 莎 鲨
 tu 兔 凸 吐 图 土 屠 徒 涂 秃 突 途
 han 函 含 喊 寒 捍 撼 汉 汗 涵 焊 韩
 ci 刺 慈 次 此 瓷 疵 磁 茨 词 赐 辞
 sheng 剩 升 圣 声 牲 生 甥 盛 省 绳 胜
-qu 区 去 取 娶 屈 曲 渠 趋 趣 驱
 zhan 占 展 崭 战 斩 栈 沾 盏 站 粘 绽
-cuo 挫 措 搓 痤 磋 蹉 锉 错
 hao 号 嚎 壕 好 昊 毫 浩 耗 蚝 豪 郝
 chi 吃 尺 持 池 炽 痴 翅 耻 赤 迟 齿
 yao 吆 咬 姚 摇 腰 药 要 谣 遥 邀 钥
 tao 套 掏 桃 涛 淘 滔 绦 萄 讨 逃 陶
 xuan 宣 悬 旋 渲 炫 玄 眩 绚 萱 轩 选
+zao 早 枣 澡 灶 燥 皂 糟 蚤 躁 造 遭
+pi 匹 啤 屁 批 疲 痞 皮 脾 芘 譬
+yin 印 吟 因 引 殷 银 阴 隐 音 饮
+zhong 中 仲 众 忠 种 终 肿 衷 重 钟
+chu 储 出 初 厨 处 楚 畜 础 触 除
+ao 傲 凹 嗷 奥 懊 拗 敖 澳 熬 袄
+qu 区 去 取 娶 屈 曲 渠 趋 趣 驱
 xun 寻 巡 循 旬 汛 训 讯 询 迅 逊
 lian 廉 怜 恋 炼 练 联 脸 莲 连 链
 gui 归 柜 桂 瑰 规 诡 贵 跪 轨 鬼
-zao 早 枣 澡 灶 燥 皂 糟 蚤 躁 造 遭
 bu 不 哺 埠 布 怖 捕 步 簿 补 部
 si 丝 司 嗣 四 寺 思 撕 斯 死 私
 jiu 久 九 就 揪 救 旧 究 纠 舅 酒
@@ -108,19 +104,20 @@ fang 仿 坊 妨 房 放 方 纺 芳 访 防
 huo 伙 惑 或 活 火 祸 获 豁 货 霍
 ni 你 倪 匿 妮 尼 拟 泥 溺 腻 逆
 yong 佣 勇 咏 庸 恿 拥 永 泳 涌 用
-xin 信 心 新 欣 芯 薪 辛 锌 馨
 qing 倾 庆 情 擎 晴 氢 清 请 轻 青
 bang 傍 帮 棒 榜 磅 绑 膀 蚌 邦 镑
 dian 典 垫 店 惦 掂 殿 淀 点 电 颠
 shou 兽 受 售 守 寿 手 授 收 瘦 首
 rong 冗 容 戎 榕 溶 熔 绒 荣 蓉 融
 jiang 匠 奖 姜 将 江 疆 蒋 讲 酱 降
-tai 台 太 态 抬 汰 泰 胎 苔 钛
 tong 同 捅 桐 桶 痛 童 筒 统 通 铜
-mi 咪 密 弥 泌 秘 米 蜜 迷 靡
 ai 哀 唉 埃 挨 暧 爱 癌 矮 碍 艾
-zhe 哲 折 浙 着 者 着 这 遮 锗
 luo 洛 络 罗 萝 落 螺 裸 逻 锣 骆
+ti 体 剃 剔 屉 提 替 梯 踢 题
+dong 东 冬 冻 动 咚 懂 栋 洞 董
+xin 信 心 新 欣 芯 薪 辛 锌 馨
+tai 台 太 态 抬 汰 泰 胎 苔 钛
+mi 咪 密 弥 泌 秘 米 蜜 迷 靡
 xia 下 侠 吓 夏 峡 瑕 瞎 虾 辖
 chou 丑 仇 愁 抽 瞅 筹 绸 臭 酬
 ye 业 也 叶 夜 液 爷 腋 野 页
@@ -131,72 +128,84 @@ jun 俊 军 君 均 峻 菌 郡 钧 骏
 su 俗 塑 宿 溯 素 肃 苏 诉 速
 lan 兰 懒 拦 栏 烂 篮 缆 蓝 览
 hua 划 化 华 哗 滑 猾 画 花 话
-cha 叉 察 岔 差 插 查 茶 诧
-die 叠 喋 爹 碟 蝶 谍 跌 迭
 chao 吵 嘲 巢 抄 朝 潮 炒 超 钞
 zi 咨 姿 子 字 滋 籽 紫 自 资
-huan 唤 幻 患 换 欢 焕 环 缓
-meng 孟 梦 猛 盟 萌 蒙
 she 射 摄 涉 社 舌 舍 蛇 设 赦
 cai 彩 才 材 猜 菜 裁 财 踩 采
-ding 丁 定 盯 订 钉 顶 鼎
+cuo 挫 措 搓 痤 磋 蹉 锉 错
+zhe 哲 折 浙 着 者 这 遮 锗
+cha 叉 察 岔 差 插 查 茶 诧
+die 叠 喋 爹 碟 蝶 谍 跌 迭
+huan 唤 幻 患 换 欢 焕 环 缓
 bing 丙 兵 冰 并 柄 病 秉 饼
-lin 临 林 淋 琳 赁 邻
 zha 乍 扎 榨 渣 炸 眨 诈 闸
-ren 人 仁 任 刃 妊 忍 认
-ta 他 塌 塔 她 它 挞 踏
 xiu 休 修 朽 秀 绣 羞 袖 锈
-zuo 佐 作 做 坐 左 座 昨
-song 宋 怂 松 耸 诵 送 颂
-dang 党 宕 当 挡 档 荡 铛
 dou 兜 抖 斗 痘 豆 逗 都 陡
 liu 六 刘 柳 流 浏 溜 留 遛
-deng 凳 灯 登 等 邓
-kan 刊 勘 坎 堪 看 砍
 zhao 召 找 招 昭 照 爪 罩 赵
 ma 吗 嘛 妈 玛 码 马 骂 麻
 dun 吨 囤 炖 盹 盾 蹲 钝 顿
-na 哪 娜 拿 捺 纳 那
 shao 哨 少 捎 梢 烧 稍 绍 芍
 suo 唆 嗦 所 梭 琐 索 缩 锁
-tang 唐 堂 汤 淌 烫 糖 躺
 po 坡 婆 泊 泼 珀 破 迫 魄
 tuo 坨 妥 托 拓 拖 脱 陀 驼
 yue 岳 悦 曰 月 约 越 跃 阅
 gan 干 感 敢 杆 甘 秆 肝 赶
 long 拢 泷 珑 笼 聋 胧 隆 龙
-shang 上 伤 商 尚 晌 赏
+ding 丁 定 盯 订 钉 顶 鼎
+ren 人 仁 任 刃 妊 忍 认
+ta 他 塌 塔 她 它 挞 踏
+zuo 佐 作 做 坐 左 座 昨
+song 宋 怂 松 耸 诵 送 颂
+dang 党 宕 当 挡 档 荡 铛
+tang 唐 堂 汤 淌 烫 糖 躺
 chuan 串 传 喘 川 穿 舛 船
-mai 买 卖 埋 脉 迈 麦
-chan 产 禅 缠 蝉 铲 馋
 lun 仑 伦 囵 抡 沦 论 轮
 zai 仔 再 在 宰 栽 灾 载
 lao 佬 劳 唠 捞 烙 牢 老
 hou 侯 候 厚 后 吼 喉 猴
-e 俄 厄 呃 恶 额 饿
-xiong 兄 凶 汹 熊 胸 雄
 quan 全 券 劝 圈 拳 权 泉
 gang 冈 刚 岗 杠 港 纲 钢
-ming 名 命 明 铭 鸣
 kuang 况 旷 框 況 狂 眶 矿
-la 啦 喇 垃 拉 腊 辣
 gou 勾 够 构 沟 狗 购 钩
 fei 匪 废 肥 肺 费 非 飞
 zu 卒 族 祖 租 组 足 阻
-can 参 惨 残 灿 蚕 餐
 wen 吻 文 温 稳 纹 问 闻
-gao 告 搞 稿 糕 高
-qiang 墙 强 抢 枪 腔
-da 大 打 答 达
+zhuang 壮 妆 庄 撞 桩 状 装
+chen 尘 晨 沉 臣 衬 趁 陈
+man 慢 曼 满 漫 蔓 蛮 馒
+meng 孟 梦 猛 盟 萌 蒙
+lin 临 林 淋 琳 赁 邻
+kan 刊 勘 坎 堪 看 砍
+na 哪 娜 拿 捺 纳 那
+shang 上 伤 商 尚 晌 赏
+mai 买 卖 埋 脉 迈 麦
+chan 产 禅 缠 蝉 铲 馋
+e 俄 厄 呃 恶 额 饿
+xiong 兄 凶 汹 熊 胸 雄
+la 啦 喇 垃 拉 腊 辣
+can 参 惨 残 灿 蚕 餐
 ku 哭 库 枯 苦 裤 酷
 guo 国 果 裹 过 郭 锅
-zhuang 壮 妆 庄 撞 桩 状 装
 hun 婚 昏 浑 混 荤 魂
-chen 尘 晨 沉 臣 衬 趁 陈
-biao 标 表 镖
 mang 忙 盲 芒 茫 莽 蟒
-man 慢 曼 满 漫 蔓 蛮 馒
-gai 改 概 盖 该
+mian 免 勉 棉 眠 绵 面
+lie 列 劣 咧 烈 猎 裂
+pan 判 叛 攀 潘 盘 盼
+pao 刨 抛 泡 炮 袍 跑
+xue 削 学 穴 血 雪 靴
+diao 叼 吊 掉 调 钓 雕
+chui 吹 垂 捶 椎 炊 锤
+hong 哄 宏 洪 红 虹 鸿
+tian 填 天 添 甜 田 舔
+peng 彭 朋 棚 碰 蓬 鹏
+bai 拜 摆 柏 白 百 败
+tui 推 腿 蜕 褪 退 颓
+huang 皇 荒 蝗 谎 黄
+deng 凳 灯 登 等 邓
+ming 名 命 明 铭 鸣
+gao 告 搞 稿 糕 高
+qiang 墙 强 抢 枪 腔
 ru 乳 入 如 茹 辱
 er 二 儿 尔 而 耳
 kui 亏 愧 溃 盔 馈
@@ -204,107 +213,83 @@ yun 云 允 匀 晕 运
 pei 佩 培 赔 配 陪
 an 安 岸 按 暗 案
 cui 催 崔 摧 粹 脆
-mian 免 勉 棉 眠 绵 面
-ran 冉 染 然 燃
 jue 决 掘 爵 绝 觉
-lie 列 劣 咧 烈 猎 裂
-pan 判 叛 攀 潘 盘 盼
-pao 刨 抛 泡 炮 袍 跑
-xue 削 学 穴 血 雪 靴
 wo 卧 我 握 涡 窝
-diao 叼 吊 掉 调 钓 雕
-chui 吹 垂 捶 椎 炊 锤
-hong 哄 宏 洪 红 虹 鸿
-tian 填 天 添 甜 田 舔
 niu 妞 扭 牛 纽 钮
-niang 娘 酿
-kong 孔 恐 控 空
-peng 彭 朋 棚 碰 蓬 鹏
-bai 拜 摆 柏 白 百 败
-tui 推 腿 蜕 褪 退 颓
 zhuan 专 撰 砖 赚 转
-qie 且 切 怯 窃
 qiu 丘 求 球 秋 邱
 fa 乏 伐 发 法 罚
-heng 哼 恒 横 衡
-tiao 挑 条 眺 跳
 ce 侧 册 厕 测 策
 zhai 债 宅 寨 摘 窄
-tou 偷 头 投 透
-chong 充 冲 宠 虫
 guang 光 广 犷 胱 逛
-dui 兑 堆 对 队
-ze 则 择 泽 责
 chuang 创 床 疮 窗 闯
 lei 勒 泪 类 累 雷
 zhuo 卓 拙 桌 浊 酌
-gua 卦 寡 挂 瓜
-kou 口 叩 扣 抠
-keng 坑
 pin 品 拼 聘 贫 频
 wa 哇 娃 瓦 蛙 袜
-ken 啃 垦 恳 肯
-a 啊 阿
 hai 嗨 孩 害 海 还
 jiong 囧 炅 炯 窘 迥
+miao 妙 庙 描 秒 苗
+sui 岁 碎 虽 遂 随
+che 彻 扯 撤 澈 车
+liao 料 疗 缭 聊 辽
+duan 断 段 短 端 缎
+lang 朗 浪 狼 螂 郎
+da 大 打 答 达
+gai 改 概 盖 该
+ran 冉 染 然 燃
+kong 孔 恐 控 空
+qie 且 切 怯 窃
+heng 哼 恒 横 衡
+tiao 挑 条 眺 跳
+tou 偷 头 投 透
+chong 充 冲 宠 虫
+dui 兑 堆 对 队
+ze 则 择 泽 责
+gua 卦 寡 挂 瓜
+kou 口 叩 扣 抠
+ken 啃 垦 恳 肯
 kun 困 坤 捆 昆
 zhui 坠 缀 追 锥
 kua 垮 夸 挎 跨
 ben 奔 本 笨 苯
-miao 妙 庙 描 秒 苗
-bin 宾 滨 缤
-sui 岁 碎 虽 遂 随
 shuai 帅 摔 甩 衰
 pa 帕 怕 爬 琶
-che 彻 扯 撤 澈 车
 nao 恼 挠 脑 闹
 pai 拍 排 派 牌
-liao 料 疗 缭 聊 辽
-duan 断 段 短 端 缎
 shuo 朔 烁 硕 说
-lang 朗 浪 狼 螂 郎
-san 三 伞 散
-gun 棍 滚
 nai 乃 奈 奶 耐
+pian 偏 片 篇 骗
+nu 努 奴 弩 怒
+que 却 确 缺 雀
+beng 崩 泵 绷 蹦
+hen 很 恨 狠 痕
+zong 总 棕 综 踪
+kao 拷 烤 考 靠
+cao 操 曹 槽 草
+geng 更 梗 耕 耿
+shui 水 睡 税 谁
+biao 标 表 镖
+bin 宾 滨 缤
+san 三 伞 散
 sa 撒 洒 萨
 men 们 闷 门
 juan 倦 卷 捐
-ruo 弱 若
-pian 偏 片 篇 骗
 ou 偶 呕 欧
-nu 努 奴 弩 怒
 nan 南 男 难
-ka 卡 咖
-que 却 确 缺 雀
 shuang 双 爽 霜
 tun 吞 屯 豚
 zan 咱 暂 赞
-chuai 揣 踹
-hei 嘿 黑
 rang 嚷 壤 让
 hang 夯 杭 航
 zang 脏 葬 赃
 cun 存 寸 村
-ning 宁 拧
-beng 崩 泵 绷 蹦
 tie 帖 贴 铁
-hen 很 恨 狠 痕
-zong 总 棕 综 踪
 chuo 戳 绰 辍
-chai 拆 柴
-kao 拷 烤 考 靠
-rou 柔 肉
-cao 操 曹 槽 草
-geng 更 梗 耕 耿
 rui 瑞 睿 锐
-mou 某 谋
-lou 楼 漏
-shui 水 睡 税 谁
 teng 疼 腾 藤
 cong 丛 从 聪
-diu 丢
 sang 丧 嗓 桑
-pie 瞥
 le 乐 了 肋
 guai 乖 怪 拐
 cang 仓 苍 藏
@@ -314,39 +299,44 @@ leng 冷 愣 棱
 kai 凯 开 慨
 shua 刷 唰 耍
 za 咋 杂 砸
-kuai 块 快
-ga 嘎 尬
 zui 嘴 最 罪
-tuan 团
 huai 坏 怀 淮
 sai 塞 腮 赛
-zeng 增 憎
 zou 奏 揍 走
-nen 嫩
 sun 孙 损 笋
-kuan 宽 款
 pang 庞 旁 胖
 kang 康 抗 炕
 de 得 德 的
-te 忑 特
 min 悯 敏 民
-nuo 挪 诺
 kuo 扩 括 阔
 rao 扰 绕 饶
 nie 捏 蹑 镍
 lai 来 莱 赖
-run 润
 piao 漂 票 飘
+niang 娘 酿
+a 啊 阿
+gun 棍 滚
+ruo 弱 若
+ka 卡 咖
+chuai 揣 踹
+hei 嘿 黑
+ning 宁 拧
+chai 拆 柴
+rou 柔 肉
+mou 某 谋
+lou 楼 漏
+kuai 块 快
+ga 嘎 尬
+zeng 增 憎
+kuan 宽 款
+te 忑 特
+nuo 挪 诺
 reng 仍 扔
-lia 俩
 nei 内 馁
-zhun 准
 bie 别 憋
 ha 哈 蛤
 pen 喷 盆
 sou 嗽 搜
-ca 擦
-nang 囊
 wai 外 歪
 niao 尿 鸟
 ceng 层 曾
@@ -354,20 +344,30 @@ nian 年 念
 qia 恰 洽
 re 惹 热
 sao 扫 骚
-ang 昂
 chun 春 纯
 shai 晒 筛
 gen 根 跟
 se 涩 色
+qun 群 裙
+ruan 软 阮
+keng 坑
+diu 丢
+pie 瞥
+tuan 团
+nen 嫩
+run 润
+lia 俩
+zhun 准
+ca 擦
+nang 囊
+ang 昂
 mie 灭
 nve 虐
 shun 顺
 qiong 穷
-qun 群 裙
 weng 翁
 miu 谬
 zei 贼
-ruan 软 阮
 me 么
 luan 乱
 cou 凑
