--- a/dict/sbxlm.sbzr.yaml
+++ b/dict/sbxlm.sbzr.yaml
@@ -87413,7 +87413,7 @@ zyjn 这样就能
 zyke 终于科
 zykg 这有适合
 zykh 这有适合
-zykj 怎么看
+zmkj 怎么看
 zykp 这样卡片
 zykq 怎么开启
 zykr 找一款
@@ -87627,3 +87627,9 @@ zzzo 最早做
 zzzp 这种纯
 zzzt 这种字体
 zzzx 正在重新
+sejigszoze 设计工作者
+jntmykshbj 今天要上班
+woaidazirj 我爱大自然
+gzwojxsizedrdlma 给我解释这段代码
+bazexxnzrszglicgriyuwfdh 把这些内容整理成日语文档
+bhwofjyiyishnzrs 帮我翻译以上内容
