--- a/dict/sbxlm.sbzr.yaml
+++ b/dict/sbxlm.sbzr.yaml
@@ -6366,7 +6366,6 @@ plqi 拍起 排期 排气 排起 排齐
 pn 品 拼 聘 贫 频
 pyde 偏移的 平的 房源的 评得 评的
 pyju 凭据 平局 平居 萍聚 评剧
-pysi 坪石 平实 平时 平视 评事
 pyxi 平息 平溪 平西 评戏 评析
 pzdi 佩蒂 佩迪 坏的 房子的 配置的
 pzjq 否则就 否在就 坏就 房子就 陪酒
@@ -7742,6 +7741,7 @@ zzxx 专注写 作者信息 再正解 找这些 正在学习
 zzyb 只在有 自助游 这有 这种也不 重装也不
 zzye 找专业 这也 这种也 遮罩也 重装也
 zzyk 做这么 再怎么 找重要 最终要 这要
+pysi 平实 平时 平视 评事
 aiai 哀哀 爱爱 矮矮 艾艾
 aige 哀歌 挨个 矮个 艾格
 aijc 哀叫 爱教 矮脚 碍脚
@@ -41814,6 +41814,7 @@ zzzr 在中端 在终端
 zzzs 找找再说 最早只是
 zzzu 遮住注 遮罩住
 zzzw 专注中文 在找中文
+sm 神秘 什么
 aa 阿
 aabi 阿鼻
 aabk 阿宝
@@ -73905,7 +73906,6 @@ slzf 商量咋分
 slzo 啥来着
 slzs 说两种
 slzz 上了这
-sm 神秘
 sma 市民
 smba 上买把
 smbd 什么绑定
