增加模块功能

--- a/dict/sbzr.yaml
+++ b/dict/sbzr.yaml
@@ -41639,6 +41639,7 @@ zzzr 在中端 在终端
 zzzs 找找再说 最早只是
 zzzu 遮住注 遮罩住
 zzzw 专注中文 在找中文
+srf 输入法
 aa 阿
 aabi 阿鼻
 aabk 阿宝
@@ -42074,7 +42075,6 @@ baye 霸业
 bays 吧用
 bayu 跋语
 bayy 拔营
-bazexxnzrszglicgriyuwfdh 把这些内容整理成日语文档
 bazg 把政
 bazh 巴掌
 bazp 把纯
